--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="page-default">
     <div class="wrapper">
         <header class="header-default">
-            <h1>SMF</h1>
+            <h1>Contact Us</h1>
         </header>
         <nav class="nav-default">
             <ul>
@@ -19,9 +19,20 @@
             </ul>
         </nav>
         <main class="main-default">
-            <section id="home" class="section-default">
-                <h2>Sloppy Mouth Fishing Corporation</h2>
-                <p>This is the home section for SMF.</p>
+            <section id="contact" class="section-default">
+                <h2>Contact SMF</h2>
+                <p><b>LEAD DEV:</b></p>
+                <p>sabu6516@colorado.edu</p>
+                <a href="https://github.com/sabu6516">Github</a>
+                <br>
+                <a href="https://www.linkedin.com/in/samuel-buckler-5ba7022b0/">LinkedIn</a>
+
+                <p><b>CO DEV:</b></p>
+                <p>hunter.baker.b@gmail.com</p>
+                <a href="github.com/hutnerr">Github</a>
+                <br>
+                <a href="linkedin.com/in/hunter-b-baker">LinkedIn</a>
+
             </section>
         </main>
     </div>
