Fixed Hunter Link Issues + More "Contact" page now correctly links to Hunters GitHub and LinkedIn page.
Added text titles to the images on the "About" page.

May or may not have added something that is big for us.

--- a/about.html
+++ b/about.html
@@ -36,9 +36,11 @@
             <section id="founders" class="section-about founders-section">
                 <div class="founders-content">
                     <h2>Meet Our Founders</h2>
-                    <img src="Images/zzz2.png" class="founder-image">
+                    <img src="Images/zzz2.png" class="founder-image" title="Sam: LEAD DEV">
                     <br>
-                    <img src="Images/zzz.png" class="founder-image">
+                    <img src="Images/zzz.png" class="founder-image" title="Hunter: CO DEV">
+                    <br>
+                    <img src="Images/zzz3.png" class="founder-image" title="Kob: BIG FOR US">
                     <br>
                     <p>
                         Our founders are some sloppy mouth MAGNETS
