--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,19 @@
                 <br>
                 <a href="https://www.linkedin.com/in/samuel-buckler-5ba7022b0/">LinkedIn</a>
 
+                <br>
                 <p><b>CO DEV:</b></p>
                 <p>hunter.baker.b@gmail.com</p>
-                <a href="github.com/hutnerr">Github</a>
+                <a href="https://github.com/hutnerr">Github</a>
                 <br>
-                <a href="linkedin.com/in/hunter-b-baker">LinkedIn</a>
-
+                <a href="https://www.linkedin.com/in/hunter-b-baker">LinkedIn</a>
+                
+                <br>
+                <p><strong>BIG FOR US:</strong></p>
+                <p>jayfeather874@gmail.com</p>
+                <a = href="https://github.com/Koborooski">Github</a>
+                <br>
+                <a = href="https://www.linkedin.com/in/koborooski/">LinkedIn</a>
             </section>
         </main>
     </div>
