--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 <body class="page-default">
     <div class="wrapper">
         <header class="header-default">
+            <img src="Images/Sloppy.png" class="Logo">
             <h1>Contact Us</h1>
         </header>
         <nav class="nav-default">
