--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="wrapper">
         <header class="header-default">
             <img src="Images/Sloppy.png" class="Logo">
-            <h1>SMF</h1>
+            <div class="header-text">
+                <h1>SMF</h1>
+            </div>
         </header>
         <nav class="nav-default">
             <ul>
