fixed about section

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <main class="main-default">
-            <section id="about" class="section-about">
+            <section id="about" class="section-default">
                 <h2>About Us</h2>
                 <p>
                     Welcome to SMF, a premier company dedicated to advancing the fishing industry through comprehensive data logging and analysis. Established with a passion for sustainable fishing and a commitment to preserving marine ecosystems, SMF stands at the forefront of innovation in fishing data management.
@@ -36,7 +36,7 @@
                     Together, we can make a difference. Together, we can ensure that our oceans remain abundant and vibrant for generations to come.
                 </p>
             </section>
-            <section id="founders" class="section-about founders-section">
+            <section id="founders" class="section-default">
                 <div class="founders-content">
                     <h2>Meet Our Founders</h2>
                     <img src="Images/zzz2.png" class="founder-image" title="Sam: LEAD DEV">
