fixed about section

--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,15 @@
                 <a href="https://github.com/sabu6516">Github</a>
                 <br>
                 <a href="https://www.linkedin.com/in/samuel-buckler-5ba7022b0/">LinkedIn</a>
-
-                <br>
+            </section>
+            <section id="contact" class="section-default">
                 <p><b>CO DEV:</b></p>
                 <p>hunter.baker.b@gmail.com</p>
                 <a href="https://github.com/hutnerr">Github</a>
                 <br>
-                <a href="https://www.linkedin.com/in/hunter-b-baker">LinkedIn</a>
-                
-                <br>
+                <a href="https://www.linkedin.com/in/hunter-b-baker">LinkedIn</a>    
+            </section>
+            <section id="contact" class="section-default">
                 <p><strong>BIG FOR US:</strong></p>
                 <p>jayfeather874@gmail.com</p>
                 <a = href="https://github.com/Koborooski">Github</a>
