fixed about section

--- a/about.html
+++ b/about.html
@@ -17,13 +17,15 @@
         <nav class="nav-default">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="database.html">SlopBase</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <main class="main-default">
+            <h2 style="font-size: 30px;">About Us</h2>
             <section id="about" class="section-default">
-                <h2>About Us</h2>
                 <p>
                     Welcome to SMF, a premier company dedicated to advancing the fishing industry through comprehensive data logging and analysis. Established with a passion for sustainable fishing and a commitment to preserving marine ecosystems, SMF stands at the forefront of innovation in fishing data management.
 
@@ -36,20 +38,34 @@
                     Together, we can make a difference. Together, we can ensure that our oceans remain abundant and vibrant for generations to come.
                 </p>
             </section>
+            <h2 style="font-size: 30px;">Meet Our Founders</h2>
             <section id="founders" class="section-default">
                 <div class="founders-content">
-                    <h2>Meet Our Founders</h2>
-                    <img src="Images/zzz2.png" class="founder-image" title="Sam: LEAD DEV">
-                    <br>
-                    <img src="Images/zzz.png" class="founder-image" title="Hunter: CO DEV">
-                    <br>
-                    <img src="Images/zzz3.png" class="founder-image" title="Kob: BIG FOR US">
-                    <br>
-                    <p>
-                        Our founders are some sloppy mouth MAGNETS
-                    </p>
-                </div>
-            </section>
+                    <p style="font-size: 25px;"><b>Samuel Buckler</b></p>
+                    <div class="image-and-text">
+                        <img src="Images/zzz2.png" class="founder-image" title="Kob: BIG FOR US">
+                        <p class="founder-description">description.</p>
+                    </div>
+                </div>     
+            </section> 
+            <section id="founders" class="section-default">
+                <div class="founders-content">
+                    <p style="font-size: 25px;"><b>Hunter Baker</b></p>
+                    <div class="image-and-text">
+                        <img src="Images/zzz.png" class="founder-image" title="Kob: BIG FOR US">
+                        <p class="founder-description">description.</p>
+                    </div>
+                </div>     
+            </section> 
+            <section id="founders" class="section-default">
+                <div class="founders-content">
+                    <p style="font-size: 25px;"><b>Jakob Bennie</b></p>
+                    <div class="image-and-text">
+                        <img src="Images/zzz3.png" class="founder-image" title="Kob: BIG FOR US">
+                        <p class="founder-description">description.</p>
+                    </div>
+                </div>     
+            </section> 
         </main>
             </section>
         </main>
