--- a/database.html
+++ b/database.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>SlopBase</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="page-default">
@@ -11,7 +11,7 @@
         <header class="header-default">
             <img src="Images/Sloppy.png" class="Logo">
             <div class="header-text">
-                <h1>SMF</h1>
+                <h1>SlopBase</h1>
             </div>
         </header>
         <nav class="nav-default">
@@ -24,9 +24,12 @@
             </ul>
         </nav>
         <main class="main-default">
-            <section id="home" class="section-default">
-                <h2>Sloppy Mouth Fishing Corporation</h2>
-                <p>This is the home section for SMF.</p>
+        </main>
+        <main class="main-default">
+            </section>
+            </section>
+            <section id="SlopBase" class="section-default">
+            <p>The SlopBase will go here, including entry and data visualization.</p>
             </section>
         </main>
     </div>
