--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
         <nav class="nav-default">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="database.html">SlopBase</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
