--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Leaderboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="page-default">
@@ -11,7 +11,7 @@
         <header class="header-default">
             <img src="Images/Sloppy.png" class="Logo">
             <div class="header-text">
-                <h1>SMF</h1>
+                <h1>Leaderboard</h1>
             </div>
         </header>
         <nav class="nav-default">
@@ -24,9 +24,19 @@
             </ul>
         </nav>
         <main class="main-default">
-            <section id="home" class="section-default">
-                <h2>Sloppy Mouth Fishing Corporation</h2>
-                <p>This is the home section for SMF.</p>
+        </main>
+        <main class="main-default">
+            <h1>#1: The Goliath</h1>
+            <section id="Leaderboard" class="section-default">
+                <img src="Images/LB1.jpg" class="LBPics">
+            </section>
+            <h1>#2: The Lean Bandit</h1>
+            <section id="Leaderboard" class="section-default">
+                <img src="Images/LB2.jpg" class="LBPics">
+            </section>
+            <h1>#3: Big Ron</h1>
+            <section id="Leaderboard" class="section-default">
+                <img src="Images/LB3.jpg" class="LBPics">
             </section>
         </main>
     </div>
