added link new tab for contact

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 <div class="founders-content">
                     <p style="font-size: 25px;"><b>Samuel Buckler</b></p>
                     <div class="image-and-text">
-                        <img src="Images/zzz2.png" class="founder-image" title="Kob: BIG FOR US">
+                        <img src="Images/zzz2.png" class="founder-image" title="Sam: Lead Dev">
                         <p class="founder-description">description.</p>
                     </div>
                 </div>     
@@ -52,7 +52,7 @@
                 <div class="founders-content">
                     <p style="font-size: 25px;"><b>Hunter Baker</b></p>
                     <div class="image-and-text">
-                        <img src="Images/zzz.png" class="founder-image" title="Kob: BIG FOR US">
+                        <img src="Images/zzz.png" class="founder-image" title="Hunter: Co Dev">
                         <p class="founder-description">description.</p>
                     </div>
                 </div>     
