--- a/contact.html
+++ b/contact.html
@@ -28,23 +28,23 @@
             <section id="contact" class="section-default">
                 <p><b>LEAD DEV:</b></p>
                 <p>sabu6516@colorado.edu</p>
-                <a href="https://github.com/sabu6516">Github</a>
+                <a target="_blank" href="https://github.com/sabu6516">Github</a>
                 <br>
-                <a href="https://www.linkedin.com/in/samuel-buckler-5ba7022b0/">LinkedIn</a>
+                <a target="_blank" href="https://www.linkedin.com/in/samuel-buckler-5ba7022b0/">LinkedIn</a>
             </section>
             <section id="contact" class="section-default">
                 <p><b>CO DEV:</b></p>
                 <p>hunter.baker.b@gmail.com</p>
-                <a href="https://github.com/hutnerr">Github</a>
+                <a target="_blank"href="https://github.com/hutnerr">Github</a>
                 <br>
-                <a href="https://www.linkedin.com/in/hunter-b-baker">LinkedIn</a>    
+                <a target="_blank" href="https://www.linkedin.com/in/hunter-b-baker">LinkedIn</a>    
             </section>
             <section id="contact" class="section-default">
                 <p><strong>BIG FOR US:</strong></p>
                 <p>jayfeather874@gmail.com</p>
-                <a = href="https://github.com/Koborooski">Github</a>
+                <a target="_blank" href="https://github.com/Koborooski">Github</a>
                 <br>
-                <a = href="https://www.linkedin.com/in/koborooski/">LinkedIn</a>
+                <a target="_blank" href="https://www.linkedin.com/in/koborooski/">LinkedIn</a>
             </section>
         </main>
     </div>
