--- a/about.html
+++ b/about.html
@@ -45,7 +45,14 @@
                     <p style="font-size: 25px;"><b>Samuel Buckler</b></p>
                     <div class="image-and-text">
                         <img src="Images/zzz2.png" class="founder-image" title="Sam: Lead Dev">
-                        <p class="founder-description">description.</p>
+                        <p class="founder-description">
+                            <em>Beer, fishy fishy fishy</em>
+                            <br><br>
+                            The one thing our founder Samuel loves more than catching a fine sloppy mouth is doing the same thing irresponsibly. 
+                            Through <i>days</i> of hard<i>ish</i> work, he and his team have begun the SMF Project, which will become the ultimate Slopperman's dream.
+                            In Sam's spare time he dreams of catching a monster with the frog, or burning ticks in an industrial oven.
+                            When contacted to give a pre-fishing interview for our website, he simply stated: <i>Sleep well sloppies, tommorows'a fishin' frenzy.</i> 
+                        </p>
                     </div>
                 </div>     
             </section> 
@@ -55,7 +62,7 @@
                     <div class="image-and-text">
                         <img src="Images/zzz.png" class="founder-image" title="Hunter: Co Dev">
                         <p class="founder-description">
-                            <em>"mmm fish"</em>
+                            <em>mmm fish</em>
                             <br><br>
                             He loves fishin'
                         </p>
@@ -68,9 +75,9 @@
                     <div class="image-and-text">
                         <img src="Images/zzz3.png" class="founder-image" title="Kob: BIG FOR US">
                         <p class="founder-description">
-                            <em>"I feel my Slopdar going crazy on this cast"</em>
+                            <em>I feel my Slopdar going crazy on this cast</em>
                             <br><br>
-                            As inovative as he is charming, Jakob is always pushing the sloppy tech to it's limit. His internal Slopdar™ allows him to know when and where the sloppys are biting.
+                            As innovative as he is charming, Jakob is always pushing the sloppy tech to it's limit. His internal Slopdar™ allows him to know when and where the sloppies are biting.
                             A master of every lure, no fish is too big, although some may be too small. Disapointed with small fry, Jakob is always aiming for the highest heights of sloppys.  
                         
                         </p>
