images path file test

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -30,7 +30,7 @@
             <h1>#1: The Goliath</h1>
             <div class="LB-image-and-text">
                 <div class="LBPics">
-                    <img src="images/LB1.jpg" class="LBPics-inner">
+                    <img src="Images/LB1.jpg" class="LBPics-inner">
                 </div>
                 <div class="LB-text">
                 <section id="Leaderboard" class="section-default">
@@ -56,7 +56,7 @@
             <h1>#2: The Lean Bandit</h1>
             <div class="LB-image-and-text">
                 <div class="LBPics">
-                    <img src="images/LB2.jpg" class="LBPics-inner">
+                    <img src="Images/LB2.jpg" class="LBPics-inner">
                 </div>
                 <section id="Leaderboard" class="section-default">
                     In the tranquil waters of Pond 3, unfolds a tale of angling prowess centered around The Lean Bandit, a legendary Sloppy Mouth bass whose capture would become the stuff of local legend. 
@@ -79,7 +79,7 @@
             <h1>#3: Big Jimmy</h1>
             <div class="LB-image-and-text">
                 <div class="LBPics">
-                    <img src="images/LB3.jpg" class="LBPics-inner">
+                    <img src="Images/LB3.jpg" class="LBPics-inner">
                 </div>
                 <section id="Leaderboard" class="section-default">
                     In the hallowed waters of Pond 6, a tale unfolds that speaks of Big Jimmy, a Sloppy Mouth bass rumored to be the offspring of the legendary Goliath Sloppy Mouth. 
