--- a/leaderboard.html
+++ b/leaderboard.html
@@ -84,7 +84,7 @@
                 <section id="Leaderboard" class="section-default">
                     In the hallowed waters of Pond 6, a tale unfolds that speaks of Big Jimmy, a Sloppy Mouth bass rumored to be the offspring of the legendary Goliath Sloppy Mouth. 
                     This fish had garnered a reputation as a formidable adversary among local anglers, known for its size and cunning. 
-                    It was on a crisp morning when Kob, a seasoned fisherman well-versed in the lore of Pond 6, ventured forth in pursuit of this elusive giant.
+                    It was on a dreary evening when Kob, a seasoned fisherman well-versed in the lore of Pond 6, ventured forth in pursuit of this elusive giant.
                     With the patience cultivated over years spent on Pond 6's shores, Kob cast his line into the deep where Big Jimmy was said to lurk. 
                     <br><br>
                     The strike, when it came, was powerful and sudden—a testament to the raw strength and guile of the bass. Thus began an epic battle of wills.
