--- a/leaderboard.html
+++ b/leaderboard.html
@@ -94,7 +94,7 @@
                     The tension in the air was palpable, a silent witness to the fierce struggle unfolding in Pond 6.
                     <br><br>
                     In the end, despite the challenges and setbacks, Kob emerged victorious. Big Jimmy, a testament to the untamed spirit of Pond 6's aquatic realm, was brought ashore—a trophy that spoke of both skill and resilience.
-                    Among the tales whispered among local anglers, one stood out—the bait that lured Big Jimmy to the hook was none other than the spunky sperm, famously used by his rumored father, the Goliath Sloppy Mouth. This detail added another layer of mystique to Big Jimmy's capture, reaffirming the storied tradition of Pond 6 and the enduring allure of its elusive giants.
+                    Among the tales whispered among local anglers, one stood out—the bait that lured Big Jimmy to the hook was none other than the spunky sperm, famously used in the capture of his rumored father, the Goliath Sloppy Mouth. This detail added another layer of mystique to Big Jimmy's capture, reaffirming the storied tradition of Pond 6 and the enduring allure of its elusive giants.
                </section>
             </div>
         </main>
