changed icon picture

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="Images/Sloppy.png">
+    <link rel="icon" href="Images/ico.png">
 </head>
 <body class="page-default">
     <div class="wrapper">
