About Corrections Changed some of my about page.

--- a/about.html
+++ b/about.html
@@ -83,10 +83,10 @@
             <section id="founders" class="section-default">
                 <div class="founders-content">
                         <p class="founder-description">
-                            <em>I feel my Slopdar going crazy on this cast</em>
+                            <em>Guys, I think my Slopdar™ got snagged in that tree...</em>
                             <br><br>
-                            As innovative as he is charming, Jakob is always pushing the sloppy tech to it's limit. His internal Slopdar™ allows him to know when and where the sloppies are biting.
-                            A master of every lure, no fish is too big, although some may be too small. Disapointed with small fry, Jakob is always aiming for the highest heights of sloppys.  
+                            As innovative as he is charming, Jakob is always pushing his sloppy tech past it's limit. His internal Slopdar™ allows him to know when and where the sloppies are biting.
+                            A master at losing every lure, no fish is too big, although some may be too small. Disapointed with small fry, Jakob is always aiming for the highest heights of sloppys.  
                         </p>    
             </section> 
             </div>
